# color-py

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md
src/codechu_color/: __init__.py  color.py  convert.py  gtk.py  palette.py  palettes.py
tests/: test_color.py  test_convert.py  test_gtk.py  test_palette.py  test_palettes.py
